# hexa-ddd-blueprint

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/blueprint/: __init__.py  defaults.py  logging.py
src/blueprint/cli/: main.py
src/blueprint/generators/: project.py
src/blueprint/prompts/: interactive.py
src/blueprint/templates/base/: README.md.j2  __main__.py.j2  app.py.j2  base_entity.py.j2  building_blocks.py.j2  conftest.py.j2  database_port.py.j2  dependencies.py.j2  domain_event.py.j2  env.dev.j2  env.j2  events.py.j2  exceptions.py.j2  gitignore.j2  init.py.j2  pre-commit-config.yaml.j2  pyproject.toml.j2  settings.py.j2
src/blueprint/templates/base/exceptions/: __init__.py.j2  base.py.j2  validation.py.j2
src/blueprint/templates/ci/: ci.yml.j2
src/blueprint/templates/db/postgres/: config.py.j2  database.py.j2  models.py.j2  repositories.py.j2
src/blueprint/templates/devcontainer/: devcontainer.json.j2  docker-compose.yml.j2  launch.json.j2
src/blueprint/templates/docker/: Dockerfile.j2  docker-compose.yml.j2  dockerignore.j2
src/blueprint/templates/docs/: hexagonal.puml.j2
src/hexa_ddd_blueprint/: __init__.py
src/hexa_ddd_blueprint/cli/: main.py
src/hexa_ddd_blueprint/generators/: project.py
src/hexa_ddd_blueprint/templates/base/: app.py.j2  database_port.py.j2  events.py.j2  init.py.j2
src/hexa_ddd_blueprint/templates/db/postgres/: config.py.j2  database.py.j2
tests/: test_cli.py  test_generator.py  test_prompts.py
