[project]
name = "blueprint"
version = "0.1.0"
description = "CLI tool that scaffolds opinionated Python projects following DDD + Hexagonal Architecture"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
    "loggerizer>=0.1.0",
]

[project.scripts]
blueprint = "blueprint.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blueprint"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "debugpy>=1.8.0",
]
